# ohjelmistotuotantoGIT

./: README.md
osa2/nhl-statistics-1/: pyproject.toml
osa2/nhl-statistics-1/src/: .coverage  index.py  player_reader.py  statistics_service.py
osa2/nhl-statistics-1/src/tests/: __init__.py  test_statistics_sevice.py
osa2/poetry-web/: pyproject.toml
osa2/project-reader/src/: project.py  project_reader.py
osa3/hello-docker/: Dockerfile
osa3/hello-robot/: log.html  output.xml  report.html
osa3/login-robot/: log.html  output.xml  report.html
osa3/login-robot/src/services/: user_service.py
osa3/login-robot/src/tests/: login.robot  register.robot  resource.robot
osa4/: retro.md
osa4/maksukortti-mock/src/: kassapaate.py
osa4/maksukortti-mock/src/tests/: kassapaate_test.py
osa4/mock-demo/tests/: kauppa_test.py
