[project]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = [
    {name = "tujokuus",email = "tujokuus@student.jyu.fi"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
